--- a/hpotter_gottshaldtquiz/res/menu/user_actions.xml
+++ b/hpotter_gottshaldtquiz/res/menu/user_actions.xml
@@ -1,9 +1,16 @@
+<?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/menu_logoff"
         android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/action_settings"/>
+        android:showAsAction="ifRoom|withText"
+        android:title="@string/logoff"/>
+    
+    <item
+        android:id="@+id/menu_delete_user"
+        android:orderInCategory="100"
+        android:showAsAction="ifRoom|withText"
+        android:title="@string/delete_user_button_label"/>
 
 </menu>
